jte-jsp-converter compiles with Java 8